--- a/main.tex
+++ b/main.tex
@@ -56,7 +56,7 @@
 maxnames=2,
 style=numeric-comp,
 backref=true,
-backend=biber]{biblatex}
+backend=bibtex]{biblatex}
 % Use \cite, \footcite, \parencite, etc. \supercite, Is only compatible if style
 % is numeric. Styles: numeric, numeric-comp, authoryear, etc.
 \addbibresource{references.bib}
@@ -66,7 +66,7 @@ backend=biber]{biblatex}
 
 %%%%%%%%%%%%%% PRESENTATION INFO %%%%%%%%%%%%%%
 \title{My Title}
-%\subtitle{}
+\subtitle{My Subtitle}
 
 \date[\specialdate\today \hspace*{1em} Occasion]{\today \\ Occasion}
 % - Use the \inst{?} command only if the authors have different
@@ -93,8 +93,8 @@ Other University}
 % is a graphic format that can be processed by latex or pdflatex,
 % resp., then you can add a logo as follows:
 
-% \pgfdeclareimage[height=0.5cm]{university-logo}{university-logo-filename}
-% \logo{\pgfuseimage{university-logo}}
+%\pgfdeclareimage[height=5cm]{university-logo}{ND_Logos/mendoza/mendoza_mark}
+%\logo{\pgfuseimage{university-logo}}
 
 % define some basic colours - already defined if pstricks is used
 \setbeamercolor{blue}{fg=blue!90}
@@ -137,5 +137,5 @@ Other University}
 % You might wish to add the option [pausesections]
 \end{frame}
 
-%\input{document}
+\input{document}
 \end{document}
