--- a/beamerthemeNotreDame.sty
+++ b/beamerthemeNotreDame.sty
@@ -146,21 +146,23 @@
 \fi
 
 % This logo appears below the date on the title page.
+% \titlegraphic{\vspace{-<shift>}\raisebox{<shift>}{\includegraphics[<options>]{<image>}}}
+
 \ifbeamer@compactlogo
   \ifbeamer@white
   	\logo{\includegraphics[height=0.6cm]{ND_Logos/monogram/ND_monogram_gold_metallic}}
-    \titlegraphic{\includegraphics[height=1.5cm]{ND_Logos/mendoza/mendoza_mark}}
+    \titlegraphic{\vspace{-1cm}\raisebox{1cm}{\includegraphics[height=6.0cm]{ND_Logos/mendoza/mendoza_mark}}}
   \else
   	\logo{\includegraphics[height=0.6cm]{ND_Logos/monogram/ND_monogram_blue}}
-    \titlegraphic{\includegraphics[height=1.5cm]{ND_Logos/mendoza/mendoza_mark}}
+    \titlegraphic{\vspace{-1cm}\raisebox{1cm}{\includegraphics[height=6.0cm]{ND_Logos/mendoza/mendoza_mark}}}
   \fi
 \else
   \ifbeamer@white
   	\logo{\includegraphics[height=0.6cm]{ND_Logos/monogram/ND_monogram_gold_metallic}}
-    \titlegraphic{\includegraphics[height=1.5cm]{ND_Logos/mendoza/mendoza_mark}}
+    \titlegraphic{\vspace{-1cm}\raisebox{1cm}{\includegraphics[height=6.0cm]{ND_Logos/mendoza/mendoza_mark}}}
   \else
   	\logo{\includegraphics[height=0.6cm]{ND_Logos/monogram/ND_monogram_blue}}
-    \titlegraphic{\includegraphics[height=1.5cm]{ND_Logos/mendoza/mendoza_mark}}
+    \titlegraphic{\vspace{-1cm}\raisebox{1cm}{\includegraphics[height=6.0cm]{ND_Logos/mendoza/mendoza_mark}}}
   \fi
 \fi
 
